# js-framework-benchmark

./: .gitignore  README.md  bechmark_change.sh  benchmark_change.sh
.github/workflows/: benchmark.yml
frameworks/keyed/wasm-bindgen/bundled-dist/: 1.js  index.js
frameworks/keyed/yew/: Cargo.toml  package.json
frameworks/keyed/yew-baseline/: Cargo.toml  package.json
frameworks/keyed/yew-baseline/bundled-dist/: js-framework-benchmark-yew.js  js-framework-benchmark-yew_bg.wasm
frameworks/keyed/yew-baseline/src/: lib.rs
frameworks/keyed/yew/bundled-dist/: js-framework-benchmark-yew.js  js-framework-benchmark-yew_bg.wasm
frameworks/keyed/yew/src/: lib.rs
frameworks/non-keyed/yew/: Cargo.toml
frameworks/non-keyed/yew/bundled-dist/: js-framework-benchmark-yew.js  js-framework-benchmark-yew_bg.wasm
frameworks/non-keyed/yew/src/: lib.rs
results_diff/src/: main.rs
webdriver-ts/: package.json  results.json
webdriver-ts-results/: table.html
webdriver-ts-results/src/: results.ts
