[package]
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
edition = "2018"
name = "js-framework-benchmark-yew"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = {version = "0.7.3", features = ["wasm-bindgen", "small_rng"]}
wasm-bindgen = "0.2.62"

# UPDATE TO USE YOUR BRANCH
yew = {git = "https://github.com/bakape/yew ", rev = "d34e55d14bd1448e6a0c93a5958d3f38e48d8edd"}
# UPDATE TO USE YOUR BRANCH

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
